--- a/.github/workflows/sshx-backup.yml
+++ b/.github/workflows/sshx-backup.yml
@@ -1,59 +1,42 @@
-name: ⏳ SSHX VM with Auto Backup (6 Hour Runtime)
+name: SSHX Backup Runner
 
 on:
-  schedule:
-    - cron: "0 */6 * * *"  # Every 6 hours
   workflow_dispatch:
+  schedule:
+    - cron: "0 * * * *"  # Runs every hour
 
 jobs:
   sshx-vm:
     runs-on: ubuntu-latest
 
     steps:
-      - name: ⬇️ Checkout Repo
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: 💻 Install SSHX CLI
+      - name: Install SSHX
         run: |
-          curl -s https://sh.sshx.io/install | bash
+          curl -s https://sshx.io/install.sh | bash
+          echo "$HOME/.sshx/bin" >> $GITHUB_PATH
+          export PATH="$HOME/.sshx/bin:$PATH"
 
-      - name: 🔐 Configure Git for Backup
-        run: |
-          git config --global user.name "Auto Backup"
-          git config --global user.email "actions@github.com"
-
-      - name: 📁 Create /vmdata Folder
-        run: |
-          sudo mkdir -p /vmdata
-          sudo chmod 777 /vmdata
-
-      - name: ♻️ Restore Old Backup (if any)
-        run: |
-          git fetch origin vm-data
-          git checkout vm-data || git checkout --orphan vm-data
-          if [ -d "vmdata" ]; then
-            sudo cp -r vmdata/* /vmdata/ || true
-          fi
-          git checkout main
-
-      - name: 🚀 Start SSHX VM
+      - name: Start SSHX VM for 6 hours
         run: |
           sshx --name "ZothyBackupVM" --runtime 6h &
-          sleep 15
-          sshx info
+          sleep 10  # wait for VM to fully initialize
 
-      - name: ⏳ Keep VM Alive for 6 Hours
+      - name: Restore VM Data from vm-data branch
         run: |
-          echo "Sleeping 6 hours while VM runs..."
-          sleep 21600
+          git fetch origin vm-data
+          git checkout vm-data -- vm-data || echo "No backup found."
 
-      - name: 💾 Backup /vmdata to vm-data branch
+      - name: Backup VM Data to vm-data branch
         run: |
-          git fetch origin
-          git checkout vm-data || git checkout --orphan vm-data
-          rm -rf vmdata
-          mkdir -p vmdata
-          sudo cp -r /vmdata/* vmdata/ || true
-          git add vmdata
-          git commit -m "💾 Backup VM data on $(date)"
-          git push origin vm-data --force
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
+          mkdir -p vm-data
+          rsync -a --delete --exclude ".git" /home/runner/work/*/vm-data/ vm-data/
+
+          git add vm-data
+          git commit -m "Auto backup $(date '+%Y-%m-%d %H:%M:%S')" || echo "No changes to commit"
+          git push origin `git subtree split --prefix vm-data main`:vm-data --force
